--- a/settings.json
+++ b/settings.json
@@ -228,3 +228,200 @@
     }
   }
 }
+
+
+new 
+
+{
+  // Workbench
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.list.smoothScrolling": true,
+  // Explorer
+  "explorer.compactFolders": false,
+  "explorer.confirmDelete": true,
+  // Editor and breadcrumbs
+  "editor.renderWhitespace": "boundary",
+  "editor.fontSize": 16,
+  "editor.detectIndentation": true,
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.mouseWheelScrollSensitivity": 2,
+  "editor.smoothScrolling": true,
+  "editor.mouseWheelZoom": true,
+  "editor.linkedEditing": true,
+  "editor.fontFamily": "Consolas, Fira Code, 'Courier New', monospace",
+  "editor.fontLigatures": true,
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll": "explicit"
+  },
+  "editor.suggestSelection": "first",
+  // Terminal
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.external.linuxExec": "x-terminal-emulator",
+  "terminal.integrated.fontFamily": "'Fira Code', Consolas",
+  "terminal.integrated.fontSize": 10,
+  // Javascript & TypeScript
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.preferences.quoteStyle": "single",
+  "javascript.validate.enable": false,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "javascript.suggest.autoImports": true,
+  "typescript.suggest.autoImports": true,
+  "[javascript]": {
+    "editor.suggestSelection": "recentlyUsed",
+    "editor.suggest.showKeywords": false
+  },
+  //debug
+  "debug.toolBarLocation": "docked",
+  "debug.openExplorerOnEnd": true,
+  "debug.inlineValues": "on",
+  "debug.autoExpandLazyVariables": true,
+  // Python
+  "[python]": {
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
+  },
+  // Django
+  "files.associations": {
+    "*.html": "html",
+    "**/templates/*.html": "django-html",
+    "**/templates/*": "django-txt",
+    "**/requirements{/**,*}.{txt,in}": "pip-requirements",
+    "*.ts": "typescript"
+  },
+  // Emmet
+  "emmet.syntaxProfiles": {
+    "javascript": "jsx"
+  },
+  "emmet.includeLanguages": {
+    "django-html": "html",
+    "javascript": "javascriptreact",
+    "typescript": "typescriptreact"
+  },
+  // ##################### Extensions ##################### //
+  // Code runner
+  "code-runner.clearPreviousOutput": true,
+  "code-runner.ignoreSelection": true,
+  "code-runner.saveFileBeforeRun": true,
+  "code-runner.runInTerminal": true,
+  "code-runner.preserveFocus": false,
+  "code-runner.executorMap": {
+    "python": "python3 -u",
+    "typescript": "npx ts-node --files --transpile-only"
+  },
+  "material-icon-theme.folders.associations": {
+    "postgres": "database",
+    "external": "connection",
+    "infrastructure": "context",
+    "presentation": "controller",
+    "entities": "core",
+    "factories": "generator",
+    "ports": "contract",
+    "domain": "class",
+    "main": "home",
+    "schemas": "class",
+    "typeorm": "database",
+    "repositories": "mappings",
+    "http": "container",
+    "migrations": "tools",
+    "modules": "components",
+    "implementations": "core",
+    "dtos": "typescript",
+    "fakes": "mock",
+    "websockets": "pipe",
+    "protos": "pipe",
+    "grpc": "pipe",
+    "application": "app",
+    "providers": "include",
+    "subscribers": "messages",
+    "use-cases": "controller",
+    "features": "controller",
+    "kafka": "scripts",
+    "mappers": "meta",
+    "adapters": "plugin",
+    "eslint-config": "tools",
+    "crypto": "keys",
+    "gateways": "plugin",
+  },
+  // Material Icons Settings,
+  "material-icon-theme.files.associations": {
+    "*.controller.ts": "nest-controller",
+    "*.module.ts": "nest-module",
+    "*.service.ts": "nest-service",
+    "*.middleware.ts": "nest-middleware",
+    "*.filter.ts": "nest-filter",
+    "*.pipe.ts": "nest-pipe",
+    "*.gateway.ts": "nest-gateway",
+    "*.decorator.ts": "nest-decorator",
+    "*.guard.ts": "nest-guard",
+    "*.resolver.ts": "graphql",
+    "*.input.ts": "graphql"
+  },
+  "security.workspace.trust.untrustedFiles": "open",
+  "files.autoSave": "afterDelay",
+  "javascript.preferences.importModuleSpecifier": "non-relative",
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "jestrunner.codeLensSelector": "**/*.{test,spec,int-spec}.{js,jsx,ts,tsx}",
+  "editor.inlineSuggest.suppressSuggestions": true,
+  "liveServer.settings.donotShowInfoMsg": true,
+  "terminal.external.windowsExec": "C:\\cmder",
+  "terminal.integrated.profiles.windows": {
+    "PowerShell": {
+      "source": "PowerShell",
+      "icon": "terminal-powershell"
+    },
+    "Command Prompt": {
+      "path": [
+        "${env:windir}\\Sysnative\\cmd.exe",
+        "${env:windir}\\System32\\cmd.exe"
+      ],
+      "args": [],
+      "icon": "terminal-cmd"
+    },
+    "Git Bash": {
+      "source": "Git Bash"
+    },
+    "Cmder": {
+      "path": "C:\\Windows\\System32\\cmd.exe",
+      "args": [
+        "/K",
+        "C:\\cmder\\vendor\\bin\\vscode_init.cmd"
+      ]
+    }
+  },
+  "terminal.integrated.defaultProfile.windows": "Cmder",
+  "chat.editor.wordWrap": "on",
+  "github.copilot.editor.enableAutoCompletions": true,
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "emoji-commit-tiny.emojis": {
+    "feat": "​​🧩",
+    "test": "🧪",
+    "ci": "📀",
+    "chore": "💽"
+  },
+  "material-icon-theme.hidesExplorerArrows": false,
+  "material-icon-theme.files.color": "#42a5f5",
+  "gitlens.views.stashes.files.icon": "status",
+  "eslint.format.enable": true,
+  "extensions.ignoreRecommendations": true,
+  "editor.minimap.enabled": false,
+  "editor.minimap.renderCharacters": false,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Hadar",
+  "git.enableSmartCommit": true,
+  "hediet.vscode-drawio.resizeImages": null,
+  "hediet.vscode-drawio.theme": "dark",
+}
