--- a/settings.json
+++ b/settings.json
@@ -1,427 +1,113 @@
 {
-  // Workbench
+  "workbench.colorTheme": "Min Dark",
+  "symbols.hidesExplorerArrows": false,
+  "workbench.iconTheme": "symbols",
+  "editor.fontFamily": "JetBrains Mono",
   "workbench.startupEditor": "newUntitledFile",
-  "workbench.editor.labelFormat": "short",
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.editor.enablePreview": false,
-  "workbench.sideBar.location": "left",
-  "window.menuBarVisibility": "toggle",
-  "workbench.list.smoothScrolling": true,
-  "workbench.colorTheme": "OM Theme (Night Owl Italic)",
-  "workbench.editorAssociations": [
-    {
-      "viewType": "jupyter.notebook.ipynb",
-      "filenamePattern": "*.ipynb"
-    }
+  "editor.fontSize": 15,
+  "editor.lineHeight": 1.8,
+  "javascript.suggest.autoImports": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "editor.rulers": [
+    80,
+    120
   ],
-
-  // Explorer
-  "explorer.compactFolders": false,
-  "explorer.confirmDelete": true,
-
-  // Editor and breadcrumbs
-  "breadcrumbs.enabled": true,
-  "editor.renderControlCharacters": false,
-  "editor.tabSize": 2,
   "editor.renderLineHighlight": "gutter",
-  "editor.rulers": [79, 120],
-  "editor.minimap.enabled": false,
-  "editor.fontSize": 20,
-  "editor.detectIndentation": true,
-  "editor.snippetSuggestions": "top",
-  "editor.wordBasedSuggestions": false,
-  "editor.suggest.localityBonus": true,
-  "editor.acceptSuggestionOnCommitCharacter": false,
-  "editor.formatOnPaste": false,
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.mouseWheelScrollSensitivity": 2,
-  "editor.smoothScrolling": true,
-  "editor.mouseWheelZoom": true,
-  "editor.linkedEditing": true,
-  "editor.fontFamily": "'Operator Mono Lig Book', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
-  "editor.glyphMargin": false,
+  "extensions.ignoreRecommendations": true,
   "editor.fontLigatures": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll": true
-  },
-  "editor.suggestSelection": "first",
-
-  // Git
-  "git.enableSmartCommit": true,
-  "diffEditor.ignoreTrimWhitespace": true,
-
-  // Debug
-  "debug.console.fontSize": 18,
-
-  // Files and search
-  "files.defaultLanguage": "{activeEditorLanguage}",
-  "files.exclude": {
-    "USE_GITIGNORE": true
-  },
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/bower_components": true,
-    "**/coverage": true,
-    "**/dist": true,
-    "**/build": true,
-    "**/.build": true,
-    "**/.gh-pages": true
-  },
-
-  // Terminal
-  "terminal.integrated.copyOnSelection": false,
-  "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.shell.linux": "zsh",
-  "terminal.external.linuxExec": "x-terminal-emulator",
-  "terminal.integrated.fontFamily": "'Operator Mono Lig Book', 'Fira Code', 'SF Mono', Consolas, 'Source Code Pro', 'Dank Mono', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
-  "terminal.integrated.fontSize": 18,
-  "terminal.integrated.drawBoldTextInBrightColors": false,
-  "terminal.integrated.enableFileLinks": false,
-  "terminal.integrated.env.linux": {
-    // "PORT": "4000"
-  },
-
-  // Javascript & TypeScript
-  "javascript.preferences.quoteStyle": "single",
-  "typescript.preferences.quoteStyle": "single",
-  "javascript.validate.enable": false,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "javascript.suggest.autoImports": true,
-  "typescript.suggest.autoImports": true,
-  "[javascript]": {
-    "editor.suggestSelection": "recentlyUsed",
-    "editor.suggest.showKeywords": false
-  },
-
-  // Python
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.python",
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true
-  },
-  "python.formatting.autopep8Args": [
-    "--indent-size=4"
-    // "--ignore=E111",
-  ],
-  "python.linting.flake8Args": [
-    // "--ignore=E111",
-  ],
-  "python.linting.pylintArgs": [
-    "--load-plugins=pylint_django",
-    "--errors-only"
-  ],
-  "python.pythonPath": "/bin/python3.8",
-  "python.linting.flake8Enabled": true,
-  "python.linting.mypyEnabled": true,
-  "python.testing.unittestEnabled": true,
-
-  // Django
-  "files.associations": {
-    "*.html": "html",
-    "**/templates/*.html": "django-html",
-    "**/templates/*": "django-txt",
-    "**/requirements{/**,*}.{txt,in}": "pip-requirements",
-    "*.ts": "typescript"
-  },
-
-  // Emmet
-  "emmet.syntaxProfiles": {
-    "javascript": "jsx"
-  },
-  "emmet.includeLanguages": {
-    "django-html": "html",
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
-  },
-
-  // ##################### Extensions ##################### //
-
-  // Code runner
-  "code-runner.clearPreviousOutput": true,
-  "code-runner.ignoreSelection": true,
-  "code-runner.saveFileBeforeRun": true,
-  "code-runner.runInTerminal": true,
-  "code-runner.preserveFocus": false,
-  "code-runner.executorMap": {
-    "python": "python3 -u",
-    "typescript": "npx ts-node --files --transpile-only"
-  },
-  "material-icon-theme.folders.associations": {
-    "infra": "app",
-    "entities": "class",
-    "domain": "class",
-    "schemas": "class",
-    "typeorm": "database",
-    "repositories": "mappings",
-    "http": "container",
-    "migrations": "tools",
-    "modules": "components",
-    "implementations": "core",
-    "dtos": "typescript",
-    "fakes": "mock",
-    "websockets": "pipe",
-    "protos": "pipe",
-    "grpc": "pipe",
-    "providers": "include",
-    "subscribers": "messages",
-    "useCases": "controller",
-    "kafka": "scripts",
-    "mappers": "meta",
-    "*_shared": "shared",
-    "eslint-config": "tools"
-  },
-
-  // Material Icons Settings,
-  "material-icon-theme.files.associations": {
-    "*.controller.ts": "nest-controller",
-    "*.module.ts": "nest-module",
-    "*.service.ts": "nest-service",
-    "*.middleware.ts": "nest-middleware",
-    "*.filter.ts": "nest-filter",
-    "*.pipe.ts": "nest-pipe",
-    "*.gateway.ts": "nest-gateway",
-    "*.decorator.ts": "nest-decorator",
-    "*.guard.ts": "nest-guard",
-    "*.resolver.ts": "graphql",
-    "*.input.ts": "graphql"
-  },
-  // CSpell checker extension
-  "cSpell.enabled": true,
-  "cSpell.language": "en,pt,pt_BR",
-  "cSpell.enableFiletypes": ["shellscript"],
-  "cSpell.customUserDictionaries": [
-    {
-      "name": "Custom",
-      "description": "Custom CSpell Dict",
-      "path": "~/Development/custom-cspell-dictionary.txt",
-      "addWords": false
-    }
-  ],
-  "tabnine.experimentalAutoImports": true,
-  "editor.tokenColorCustomizations": {
-    "textMateRules": [
-      {
-        "scope": "keyword.other.dotenv",
-        "settings": {
-          "foreground": "#FF000000"
-        }
-      }
-    ]
-  },
-  "security.workspace.trust.untrustedFiles": "open",
-  "files.autoSave": "afterDelay",
-  "javascript.preferences.importModuleSpecifier": "non-relative",
-  "typescript.preferences.importModuleSpecifier": "non-relative",
-  "typescript.preferences.useWorkspaceDependenciesAutoImport": true,
-
-  "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
-}
-
-
-new 
-
-{
-  // Workbench
-  "workbench.startupEditor": "newUntitledFile",
-  "workbench.list.smoothScrolling": true,
-  // Explorer
+  "workbench.editor.labelFormat": "short",
   "explorer.compactFolders": false,
-  "explorer.confirmDelete": true,
-  // Editor and breadcrumbs
-  "editor.renderWhitespace": "boundary",
-  "editor.fontSize": 16,
-  "editor.detectIndentation": true,
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.mouseWheelScrollSensitivity": 2,
-  "editor.smoothScrolling": true,
-  "editor.mouseWheelZoom": true,
-  "editor.linkedEditing": true,
-  "editor.fontFamily": "Consolas, Fira Code, 'Courier New', monospace",
-  "editor.fontLigatures": true,
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.fixAll": "explicit"
-  },
-  "editor.suggestSelection": "first",
-  // Terminal
-  "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.cursorStyle": "line",
-  "terminal.external.linuxExec": "x-terminal-emulator",
-  "terminal.integrated.fontFamily": "'Fira Code', Consolas",
-  "terminal.integrated.fontSize": 10,
-  // Javascript & TypeScript
-  "javascript.preferences.quoteStyle": "single",
-  "typescript.preferences.quoteStyle": "single",
-  "javascript.validate.enable": false,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "javascript.suggest.autoImports": true,
-  "typescript.suggest.autoImports": true,
-  "[javascript]": {
-    "editor.suggestSelection": "recentlyUsed",
-    "editor.suggest.showKeywords": false
-  },
-  //debug
-  "debug.toolBarLocation": "docked",
-  "debug.openExplorerOnEnd": true,
-  "debug.inlineValues": "on",
-  "debug.autoExpandLazyVariables": true,
-  // Python
-  "[python]": {
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true
-  },
-  // Django
+  "breadcrumbs.enabled": false,
+  "workbench.activityBar.location": "hidden",
+  "editor.minimap.enabled": false,
+  "editor.stickyScroll.enabled": false,
+  "editor.scrollbar.vertical": "hidden",
+  "editor.scrollbar.horizontal": "hidden",
+  "workbench.statusBar.visible": false,
+  "workbench.layoutControl.enabled": false,
+  "workbench.editor.empty.hint": "hidden",
+  "window.menuBarVisibility": "compact",
+  "workbench.navigationControl.enabled": false,
+  "chat.commandCenter.enabled": false,
+  "workbench.tree.enableStickyScroll": false,
   "files.associations": {
-    "*.html": "html",
-    "**/templates/*.html": "django-html",
-    "**/templates/*": "django-txt",
-    "**/requirements{/**,*}.{txt,in}": "pip-requirements",
-    "*.ts": "typescript"
+    ".env.*": "dotenv",
+    ".prettierrc": "json",
+    "*.css": "css",
+    ".dev.vars": "dotenv"
   },
-  // Emmet
-  "emmet.syntaxProfiles": {
-    "javascript": "jsx"
+  "symbols.files.associations": {
+    "*.module.ts": "nest",
+    "*.guard.ts": "typescript",
+    "*.spec.ts": "ts-test",
+    "*.e2e-spec.ts": "ts-test",
+    "*.mock.ts": "ts-test",
+    "vitest.config.e2e.ts": "vite",
+    ".env.development.local": "gear",
+    ".env.test.local": "gear",
+    ".env.local": "gear",
+    ".env.example": "gear"
   },
-  "emmet.includeLanguages": {
-    "django-html": "html",
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
+  "editor.parameterHints.enabled": false,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "editor.suggestSelection": "first",
+  "explorer.confirmDelete": false,
+  ".terminalintegrated.showExitAlert": false,
+  "typescript.suggest.autoImports": true,
+  "typescript.preferences.preferTypeOnlyAutoImports": true,
+  "editor.acceptSuggestionOnCommitCharacter": false,
+  "git.enableSmartCommit": true,
+  "editor.accessibilitySupport": "off",
+  "explorer.confirmDragAndDrop": false,
+  "terminal.integrated.fontSize": 14,
+  "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
   },
-  // ##################### Extensions ##################### //
-  // Code runner
-  "code-runner.clearPreviousOutput": true,
-  "code-runner.ignoreSelection": true,
-  "code-runner.saveFileBeforeRun": true,
-  "code-runner.runInTerminal": true,
-  "code-runner.preserveFocus": false,
-  "code-runner.executorMap": {
-    "python": "python3 -u",
-    "typescript": "npx ts-node --files --transpile-only"
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "graphql"
+  ],
+  "editor.tabSize": 2,
+  "files.exclude": {
+    "**\/CVS": true,
+    "**\/.DS_Store": true,
+    "**\/.hg": true,
+    "**\/.svn": true,
+    "**\/.git": true,
+    ".vscode": true
+    // "node_modules": true
   },
-  "material-icon-theme.folders.associations": {
-    "postgres": "database",
-    "external": "connection",
-    "infrastructure": "context",
-    "presentation": "controller",
-    "entities": "core",
-    "factories": "generator",
-    "ports": "contract",
-    "domain": "class",
-    "main": "home",
-    "schemas": "class",
-    "typeorm": "database",
-    "repositories": "mappings",
-    "http": "container",
-    "migrations": "tools",
-    "modules": "components",
-    "implementations": "core",
-    "dtos": "typescript",
-    "fakes": "mock",
-    "websockets": "pipe",
-    "protos": "pipe",
-    "grpc": "pipe",
-    "application": "app",
-    "providers": "include",
-    "subscribers": "messages",
-    "use-cases": "controller",
-    "features": "controller",
-    "kafka": "scripts",
-    "mappers": "meta",
-    "adapters": "plugin",
-    "eslint-config": "tools",
-    "crypto": "keys",
-    "gateways": "plugin",
-  },
-  // Material Icons Settings,
-  "material-icon-theme.files.associations": {
-    "*.controller.ts": "nest-controller",
-    "*.module.ts": "nest-module",
-    "*.service.ts": "nest-service",
-    "*.middleware.ts": "nest-middleware",
-    "*.filter.ts": "nest-filter",
-    "*.pipe.ts": "nest-pipe",
-    "*.gateway.ts": "nest-gateway",
-    "*.decorator.ts": "nest-decorator",
-    "*.guard.ts": "nest-guard",
-    "*.resolver.ts": "graphql",
-    "*.input.ts": "graphql"
-  },
-  "security.workspace.trust.untrustedFiles": "open",
-  "files.autoSave": "afterDelay",
-  "javascript.preferences.importModuleSpecifier": "non-relative",
-  "typescript.preferences.importModuleSpecifier": "non-relative",
-  "jestrunner.codeLensSelector": "**/*.{test,spec,int-spec}.{js,jsx,ts,tsx}",
-  "editor.inlineSuggest.suppressSuggestions": true,
-  "liveServer.settings.donotShowInfoMsg": true,
-  "terminal.external.windowsExec": "C:\\cmder",
-  "terminal.integrated.profiles.windows": {
-    "PowerShell": {
-      "source": "PowerShell",
-      "icon": "terminal-powershell"
-    },
-    "Command Prompt": {
-      "path": [
-        "${env:windir}\\Sysnative\\cmd.exe",
-        "${env:windir}\\System32\\cmd.exe"
-      ],
-      "args": [],
-      "icon": "terminal-cmd"
-    },
-    "Git Bash": {
-      "source": "Git Bash"
-    },
-    "Cmder": {
-      "path": "C:\\Windows\\System32\\cmd.exe",
-      "args": [
-        "/K",
-        "C:\\cmder\\vendor\\bin\\vscode_init.cmd"
-      ]
-    }
-  },
-  "terminal.integrated.defaultProfile.windows": "Cmder",
-  "chat.editor.wordWrap": "on",
-  "github.copilot.editor.enableAutoCompletions": true,
-  "github.copilot.enable": {
-    "*": true,
-    "plaintext": false,
-    "markdown": false,
-    "scminput": false
-  },
+  "update.mode": "manual",
+  "terminal.integrated.gpuAcceleration": "on",
+  "terminal.integrated.defaultProfile.osx": "fish",
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
-  "emoji-commit-tiny.emojis": {
-    "feat": "​​🧩",
-    "test": "🧪",
-    "ci": "📀",
-    "chore": "💽"
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
   },
-  "material-icon-theme.hidesExplorerArrows": false,
-  "material-icon-theme.files.color": "#42a5f5",
-  "gitlens.views.stashes.files.icon": "status",
-  "eslint.format.enable": true,
-  "extensions.ignoreRecommendations": true,
-  "editor.minimap.enabled": false,
-  "editor.minimap.renderCharacters": false,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Hadar",
-  "git.enableSmartCommit": true,
-  "hediet.vscode-drawio.resizeImages": null,
-  "hediet.vscode-drawio.theme": "dark",
+  "window.commandCenter": false,
+  "git.openRepositoryInParentFolders": "always",
+  "editor.hideCursorInOverviewRuler": true,
+  "explorer.sortOrder": "foldersNestsFiles",
+  "explorer.fileNesting.patterns": {
+    "package.json": ".eslint*, prettier*, tsconfig*, vite*, pnpm-*, bun.lockb, nest*, package-lock*",
+    "tailwind.config.*": "tailwind.config*, postcss.config*",
+    ".env.local": ".env*",
+    ".env": ".env*"
+  },
+  "explorer.fileNesting.enabled": true,
+  "files.autoSave": "afterDelay",
+  "liveServer.settings.donotShowInfoMsg": true,
+
+    "background.editor": {
+      "images": [
+        "https://user-images.githubusercontent.com/9987486/40583669-d6189844-61c5-11e8-89e3-c52ad153da09.png",
+        "https://user-images.githubusercontent.com/9987486/40583670-d6478c9e-61c5-11e8-9551-6b55eacc7b8d.png",
+        "https://user-images.githubusercontent.com/9987486/40583671-d676c6e4-61c5-11e8-94cb-34ec4a12fa01.png"
+      ]
+    }
+
 }
