--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Min Dark",
+  "workbench.colorTheme": "OM Theme (Night Owl Italic)",
   "symbols.hidesExplorerArrows": false,
   "workbench.iconTheme": "symbols",
   "editor.fontFamily": "JetBrains Mono",
@@ -23,7 +23,6 @@
   "editor.stickyScroll.enabled": false,
   "editor.scrollbar.vertical": "hidden",
   "editor.scrollbar.horizontal": "hidden",
-  "workbench.statusBar.visible": false,
   "workbench.layoutControl.enabled": false,
   "workbench.editor.empty.hint": "hidden",
   "window.menuBarVisibility": "compact",
@@ -101,13 +100,21 @@
   "explorer.fileNesting.enabled": true,
   "files.autoSave": "afterDelay",
   "liveServer.settings.donotShowInfoMsg": true,
+  "background.editor": {
+    "images": [
+      "https://user-images.githubusercontent.com/9987486/40583669-d6189844-61c5-11e8-89e3-c52ad153da09.png",
+      "https://user-images.githubusercontent.com/9987486/40583670-d6478c9e-61c5-11e8-9551-6b55eacc7b8d.png",
+      "https://user-images.githubusercontent.com/9987486/40583671-d676c6e4-61c5-11e8-94cb-34ec4a12fa01.png"
+    ]
+  },
 
-    "background.editor": {
+  "background.fullscreen": {
       "images": [
-        "https://user-images.githubusercontent.com/9987486/40583669-d6189844-61c5-11e8-89e3-c52ad153da09.png",
-        "https://user-images.githubusercontent.com/9987486/40583670-d6478c9e-61c5-11e8-9551-6b55eacc7b8d.png",
-        "https://user-images.githubusercontent.com/9987486/40583671-d676c6e4-61c5-11e8-94cb-34ec4a12fa01.png"
-      ]
-    }
-
+        "file:///C:\\Users\\anton\\Pictures\\DesktopBackground\\kali-red.jpg",
+      ],
+      "size": "cover",         
+      "position": "center",    
+      "interval": 0,   
+      "opacity": 0.1,
+    },
 }
